# rag-llm-tui

./: .coveragerc  .env.test  .gitignore  README.md  cli.py  config.py  dice_tool.py  env.example  main.py  pyproject.toml  rag_store.py  utils.py  workflows.py
stylesheets/: chat.tcss  manage_store.tcss
tests/: conftest.py  test_rag_store.py  test_workflows.py
tests/tools/: test_dice.py
tests/utils/: test_history.py  test_singleton.py
tools/: dice.py
utils/: __init__.py  config.py  history.py  logger.py  singleton.py
