[project]
name = "rag-llm-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "click>=8.1.8",
    "d7>=1.0.1",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.2",
    "langchain[openai]>=0.3.23",
    "langgraph>=0.3.31",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.25.5",
    "textual>=3.1.0",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "textual-dev>=1.7.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "session"
